# learn-opengl

./: meson.build
include/glad/: glad.h
src/: glad.c  main.c  meson.build
src/shaders/: common.frag  common.vert  embed.fish  meson.build
